--- a/project/Makefile
+++ b/project/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -w -Wall -Wextra -Werror -pedantic -std=c11
-LDFLAGS = -lncurses
+LDFLAGS = -lncurses -pthread
 SRC = main.c pid_cmd.c pid_info.c pid_stats.c linked_list.c
 OBJ = $(SRC:.c=.o)
 TARGET = prova_fin
