remove pid_cmd file and replace function in main.c

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -w -Wall -Wextra -Werror -pedantic -std=c11
 LDFLAGS = -lncurses -pthread
-SRC = main.c pid_cmd.c pid_info.c pid_stats.c linked_list.c
+SRC = main.c pid_info.c pid_stats.c linked_list.c
 OBJ = $(SRC:.c=.o)
 TARGET = prova_fin
 
