--- a/project/Makefile
+++ b/project/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -w -Wall -Wextra -Werror -pedantic -std=c11
+CFLAGS = -w -g -Wall -Wextra -Werror -pedantic -std=c11
 LDFLAGS = -lncurses -pthread
 SRC = main.c pid_info.c pid_stats.c linked_list.c
 OBJ = $(SRC:.c=.o)
